# grapro-24-final-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
app/grass-renderer/: CMakeLists.txt  RaymarchingApplication.cpp
app/grass-renderer/shaders/: exercise10.glsl  terrain.frag  terrain.vert
app/grass-renderer/shaders/deferred/: deferred.frag
app/grass-renderer/shaders/grass_compute_shader/grass/: grass.comp  grass.frag  grass.vert  grass_gbuffer.frag
app/grass-renderer/shaders/grass_compute_shader/terrain/: terrain.vert
app/grass-renderer/shaders/grass_compute_shader_2/grass/: grass.comp  grass.vert
app/grass-renderer/shaders/grass_compute_shader_2/terrain/: terrain.frag  terrain.vert
app/grass-renderer/shaders/grass_compute_shader_3/grass/: grass.comp  grass_instantiator.comp
app/grass-renderer/shaders/grass_geometry_shader/grass/: grass.frag  grass.geom  grass.tesc  grass.tese  grass.vert  terrain.tese
app/grass-renderer/shaders/lighting/: lit.frag  utils.glsl
app/grass-renderer/shaders/renderer/deferred/: deferred.frag  deferred.vert  gbuffer.frag  gbuffer.vert
app/grass-renderer/shaders/renderer/lighting/: blinn-phong.glsl  lighting.glsl
app/grass-renderer/shaders/terrain_heightmap_cpu/: terrain.frag  terrain.vert
app/grass-renderer/shaders/terrain_heightmap_gpu/: terrain.frag  terrain.tesc  terrain.tese  terrain.vert
app/grass-renderer/src/: .clang-tidy  main.cpp
app/grass-renderer/src/_pch/: _pch.cpp  _pch.h
app/grass-renderer/src/include/: Scene.h
app/grass-renderer/src/module/: grass_renderer.ixx
app/grass-renderer/src/module/camera/: camera.ixx
app/grass-renderer/src/module/terrain/: grass_compute_shader.ixx  grass_compute_shader_2.ixx  grass_compute_shader_3.ixx  grass_geometry_shader.ixx  terrain_heightmap_cpu.ixx  terrain_heightmap_gpu.ixx
app/grass-renderer/src/module/ui/: ui_manager.ixx
app/grass-renderer/src/module/util/: heightmap_util.ixx  mesh_util.ixx  texture_util.ixx
app/module-test/: CMakeLists.txt  main.cpp  module.ixx
app/terrain/: CMakeLists.txt
lib/itugl/: CMakeLists.txt
lib/itugl/_pch/: _pch.cpp  _pch.h
lib/itugl/include/itugl/application/: Application.h
lib/itugl/include/itugl/asset/: ModelLoader.h  ShaderLoader.h  Texture2DLoader.h  TextureCubemapLoader.h  TextureLoader.h
lib/itugl/include/itugl/buffer/: AtomicCounterBufferObject.h  SharedStorageBufferObject.h  UniformBufferObject.h
lib/itugl/include/itugl/camera/: CameraController.h
lib/itugl/include/itugl/compute/: Compute.h
lib/itugl/include/itugl/core/: BufferObject.h  DeviceGL.h  IndexedBufferObject.h  Object.h
lib/itugl/include/itugl/geometry/: Drawcall.h  ElementBufferObject.h  Mesh.h  VertexArrayObject.h  VertexAttribute.h  VertexBufferObject.h  VertexFormat.h
lib/itugl/include/itugl/lighting/: DirectionalLight.h  PointLight.h  SpotLight.h
lib/itugl/include/itugl/renderer/: DeferredRenderPass.h  ForwardRenderPass.h  GBufferRenderPass.h  PostFXRenderPass.h  Renderer.h  SkyboxRenderPass.h
lib/itugl/include/itugl/scene/: ImGuiSceneVisitor.h  RendererSceneVisitor.h  SceneCamera.h  SceneLight.h  SceneModel.h  SceneNode.h
lib/itugl/include/itugl/shader/: Material.h  Shader.h  ShaderProgram.h  ShaderUniformCollection.h
lib/itugl/include/itugl/texture/: FramebufferObject.h  Texture2DObject.h  TextureCubemapObject.h  TextureObject.h
lib/itugl/include/itugl/utils/: ShaderIncludeReplacer.h
lib/itugl/src/itugl/application/: Application.cpp  Window.cpp
lib/itugl/src/itugl/asset/: AssetLoader.cpp  ModelLoader.cpp  ShaderLoader.cpp  Texture2DLoader.cpp  TextureCubemapLoader.cpp  TextureLoader.cpp
lib/itugl/src/itugl/buffer/: AtomicCounterBufferObject.cpp  SharedStorageBufferObject.cpp  UniformBufferObject.cpp
lib/itugl/src/itugl/camera/: Camera.cpp  CameraController.cpp
lib/itugl/src/itugl/compute/: Compute.cpp
lib/itugl/src/itugl/core/: BufferObject.cpp  Color.cpp  Data.cpp  DeviceGL.cpp  IndexedBufferObject.cpp  Object.cpp
lib/itugl/src/itugl/geometry/: Drawcall.cpp  ElementBufferObject.cpp  Mesh.cpp  Model.cpp  VertexArrayObject.cpp  VertexAttribute.cpp  VertexBufferObject.cpp  VertexFormat.cpp
lib/itugl/src/itugl/lighting/: DirectionalLight.cpp  Light.cpp  PointLight.cpp  SpotLight.cpp
lib/itugl/src/itugl/renderer/: DeferredRenderPass.cpp  ForwardRenderPass.cpp  GBufferRenderPass.cpp  PostFXRenderPass.cpp  RenderPass.cpp  Renderer.cpp  SkyboxRenderPass.cpp
lib/itugl/src/itugl/scene/: Bounds.cpp  ImGuiSceneVisitor.cpp  RendererSceneVisitor.cpp  Scene.cpp  SceneCamera.cpp  SceneLight.cpp  SceneModel.cpp  SceneNode.cpp  SceneVisitor.cpp  Transform.cpp
lib/itugl/src/itugl/shader/: Material.cpp  Shader.cpp  ShaderProgram.cpp  ShaderUniformCollection.cpp
lib/itugl/src/itugl/texture/: FramebufferObject.cpp  Texture2DObject.cpp  TextureCubemapObject.cpp  TextureObject.cpp
(+19 files in other folders)
